begin modeling input domain (tables) and partitioning